fix: P0 backend stabilization — CORS, SQL seed corruption, test isolation
- fix(security): Replace wildcard CORS allowedOriginPatterns('*') with
  config-driven app.cors.allowed-origins (defaults to localhost:5173)
- fix(persistence): Stop SqlFilePersistenceService writing MERGE INTO
  H2 syntax to src/main/resources/data/ — now only writes to target/
- fix(sql): Remove runtime-appended MERGE INTO blocks from users.sql
  and issues.sql that broke PostgreSQL compatibility
- fix(tests): Isolate StartupSeedDataIntegrationTest with dedicated H2
  database so other tests' TRUNCATE cleanup doesn't wipe seed data
- fix(tests): Update SQL file persistence tests to verify target/classes/
  instead of src/main/resources/ paths
- feat(geo): Add lat/lng/govLevel fields to Issue, Discussion, Poll
  models/DTOs/controllers and LocationPicker frontend component
- feat(geo): Add Haversine distance sorting to FeedPage

Tests: 29/29 passing (mvn clean test)

Worker/Who: [FE+BE Agent | Antigravity (Gemini)]